[tool.poetry]
name = "ttdiagnosis"
version = "1.0.0"
description = "Tweet extraction bot using data mining to analyze sentiments with machine learning (NLP) and send audio-transformed diagnostics to telegram using AWS Polly"
authors = ["joaoeliandro <eliandrogermano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
