[tool.poetry]
name = "ttdiagnosis"
version = "1.0.0"
description = "Tweet extraction bot using data mining to analyze sentiments with machine learning (NLP) and send audio-transformed diagnostics to telegram using AWS Polly"
authors = ["joaoeliandro <eliandrogermano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
blue = "^0.8.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
prospector = "^1.7.7"
pip-audit = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
