[tool.poetry]
name = "ttdiagnosis"
version = "1.0.0"
description = "Tweet extraction bot using data mining to analyze sentiments with machine learning (NLP) and send audio-transformed diagnostics to telegram using AWS Polly"
authors = ["joaoeliandro <eliandrogermano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.10"
SQLAlchemy = "^1.4.36"
python-dotenv = "^0.20.0"
fastapi = "^0.75.2"
httpx = "^0.22.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
blue = "^0.8.0"
isort = "^5.10.1"
mkdocs = "^1.3.0"
prospector = "^1.7.7"
pip-audit = "^2.1.1"
httpie = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
